--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"donator3.falixnodes.net",
-	"port": 25710,
+	"ip":"Badboy96lu.aternos.me",
+	"port":"29310",
 	"name": "afkbot1",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
